# app

./: .gitignore  .prettierrc  Cargo.toml  README.md  TODO.md  WEBAPP_CONVERSION.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  start-dev.sh  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.zcode/plans/: plan-sess_06b32a1c-4234-49be-82b7-58eb406da992.md
apps/muse/src-tauri/: Cargo.toml  tauri.conf.json
apps/muse/src-tauri/src/: lib.rs
crates/api/: Cargo.toml
crates/api/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/database/: Cargo.toml
crates/importer/: Cargo.toml
crates/metadata/: Cargo.toml
crates/playback/: Cargo.toml
crates/settings/: Cargo.toml
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
e2e/: command-palette.spec.ts  critical-flows.spec.ts  equalizer.spec.ts  lyrics.spec.ts  playlists.spec.ts  visualizer.spec.ts
e2e/fixtures/: e2e-lyrics.lrc
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/src/: App.tsx  index.css  routes.tsx
frontend/src/components/: MuseSidebar.tsx
frontend/src/lib/: library.ts
frontend/src/pages/: HomePage.tsx  LibraryPage.tsx
src/: main.tsx
src/app/: App.tsx  router.tsx
src/audio/: Analyser.ts  AudioEngine.ts  Equalizer.ts  PlayerController.ts
src/components/layout/: AppLayout.tsx  Sidebar.tsx  TopBar.tsx
src/components/player/: MiniPlayer.tsx
src/components/track/: TrackContextMenu.tsx  TrackList.test.tsx  TrackList.tsx  TrackRow.test.tsx  TrackRow.tsx
src/components/ui/: Button.tsx  Card.tsx  ScrollArea.tsx  Slider.tsx  ToastContainer.tsx  Tooltip.tsx
src/features/albums/: AlbumDetailPage.tsx  AlbumsPage.tsx
src/features/artists/: ArtistDetailPage.tsx  ArtistsPage.tsx
src/features/command-palette/: CommandPalette.tsx
src/features/equalizer/: EqualizerPanel.tsx
src/hooks/: useArtwork.ts  useCurrentTrack.ts  useQueueTracks.ts
src/lib/: utils.ts
src/player/: PlayerStore.ts  QueueStore.ts
src/store/: settingsStore.ts  uiStore.ts
src/styles/: globals.css
src/types/: index.ts
(+17 files in other folders)
