[workspace]
resolver = "2"
members = [
  "apps/muse/src-tauri",
  "crates/api",
  "crates/core",
  "crates/database",
  "crates/importer",
  "crates/metadata",
  "crates/playback",
  "crates/settings",
  "crates/shared"
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["muse-ai"]
