[package]
name = "muse-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.10"
actix-rt = "2.9"
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"

# Offline-first layered architecture crates
muse-core = { path = "../core" }
muse-database = { path = "../database" }
muse-importer = { path = "../importer" }
muse-metadata = { path = "../metadata" }
muse-playback = { path = "../playback" }
muse-settings = { path = "../settings" }
muse-shared = { path = "../shared" }
