[package]
name = "muse"
version = "0.1.0"
description = "Muse (offline-first personal music app)"
authors = ["muse-ai"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
# Tauri + serialization
tauri = { version = "2.11.3", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
tauri-plugin-log = "2"

# Offline-first layered architecture crates (placeholders for now)
muse-core = { path = "../../../crates/core" }
muse-database = { path = "../../../crates/database" }
muse-importer = { path = "../../../crates/importer" }
muse-metadata = { path = "../../../crates/metadata" }
muse-playback = { path = "../../../crates/playback" }
muse-settings = { path = "../../../crates/settings" }
muse-shared = { path = "../../../crates/shared" }
